--- a/styles/global.css
+++ b/styles/global.css
@@ -7,7 +7,11 @@
 }
 
 .day-box {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
 	border: black 1px solid;
 	width: 300px;
-	height: 200px;
+	height: auto;
 }
