--- a/styles/global.css
+++ b/styles/global.css
@@ -56,6 +56,7 @@ body {
 }
 
 .body-content {
+	width: 100%;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
@@ -66,6 +67,14 @@ body {
 .page-container {
 	margin: 0 auto;
 	width: var(--container-width);
+}
+
+.event-page {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	gap: 20px;
 }
 
 header {
@@ -129,15 +138,15 @@ main {
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-	border-radius: 10px;
-	padding: 20px;
-	gap: 40px;
-	background-color: var(--box-color);
 	color: #fff;
+	gap: 20px;
 }
 
 .event {
 	width: 100%;
+	background-color: var(--box-color);
+	border-radius: 10px;
+	padding: 12px;
 }
 
 .event a {
@@ -220,4 +229,15 @@ main {
 .popup {
 	padding: 4px;
 	width: 120px;
+}
+
+.selector-box {
+	width: 100%;
+	display: flex;
+	flex-direction: column;
+	justify-content: flex-start;
+	align-items: flex-start;
+	gap: 8px;
+	padding: 20px 0;
+
 }
